// SPDX-FileCopyrightText: Â© 2023 OneEyeFPV oneeyefpv@gmail.com
// SPDX-License-Identifier: GPL-3.0-or-later
// SPDX-License-Identifier: FS-0.9-or-later

syntax = "proto3";

import "google/protobuf/struct.proto";

package JoystickControl;

option go_package = "github.com/kaack/elrs-joystick-control/pkg/server/pb";

message Empty {}

message ValidationError {
  string message = 1;
  string location = 2;
  repeated ValidationError causes = 3;
}

message GetTransmitterRes {
  repeated Transmitter transmitters = 1;
}

message Transmitter {
  string port = 1;
  string name = 2;
}

message ValidationErrors {
  repeated ValidationError errors = 1;
}

message GetGamepadsRes {
  repeated Gamepad gamepads = 1;
}

message Gamepad {
  string id = 1;
  string name = 2;
  int32 axes = 3;
  int32 buttons = 4;
  int32 hats = 5;
}

message GetConfigRes {
  google.protobuf.Struct config = 1;
}

message SetConfigReq {
  google.protobuf.Struct config = 1;
}

message ValidateConfigRes {
  repeated string errors = 1;
  repeated string warnings = 2;
}

message StartLinkReq {
  string port = 1;
  int32 baud_rate = 2;
}


message GetGamepadStreamReq {
  Gamepad gamepad = 1;
}


enum GamepadInputType {
  AXIS = 0;
  BUTTON = 1;
}

message GamepadInputState {
  GamepadInputType type = 1;
  int32 index = 2;
  int32 value = 3;
}

message GamepadInputsStates {
  repeated GamepadInputState inputs_states = 1;
}


message GetTransmitterStreamReq {
  Transmitter transmitter = 1;
}

message TransmitterChannels {
  repeated TransmitterChannel channels = 1;
}

message TransmitterChannel {
  int32 channel_number = 1;
  int32 channel_value = 2;
}

message EvalState {
  bool isNaN = 2;
  int32 value = 3;
}

message EvalStates {
  map<string, EvalState> states = 1;
}

enum PortState {
  PortUnknown = 0;
  PortDisconnected = 1;
  PortConnected = 2;
}

enum SupervisorState {
  SupervisorUnknown = 0;
  SupervisorInactive = 1;
  SupervisorActive = 2;
}

message LinkState {
  SupervisorState supervisor_state = 1;
  PortState port_state = 2;
  uint64 received_packets_count = 3;
  uint64 sent_packets_count = 4;
  uint64 error_packets_count = 5;
}


message Telemetry {
  oneof data {
    LinkStatsData link_stats = 1;
    AttitudeData attitude = 2;
    BatteryData battery = 3;
    GPSData gps = 4;
    FlightModeData flight_mode = 5;
    SyncData sync = 6;
    LinkTXData link_tx = 7;
    LinkRXData link_rx = 8;
    BarometerData barometer = 9;
    VariometerData variometer = 10;
    BarometerVariometerData barometer_variometer = 11;
    CRSFDeviceInfoData device_info = 12;
    CRSFDeviceFieldEntryData device_field_entry = 13;
    CRSFDeviceFieldData device_field = 14;
    CRSFDeviceLinkStatusData device_link_status = 15;
  }
}

message CRSFDeviceLinkStatusData {
  uint32 bad_packets_count = 2;
  uint32 good_packets_count = 1;
  repeated LinkStatusFlag flags = 3;
  string warning_info = 4;
}

message CRSFDeviceFieldEntryData {
  uint32 id = 1;
  uint32 chunks_remaining = 2;
  uint32 parent_id = 3;
  CRSFDeviceFieldType data_type = 4;
  bytes buffer = 5;

}
message CRSFDeviceInfoData {
  uint32 id = 1;
  string name = 2;
  uint32 serial_number = 3;
  string hardware_version = 4;
  string software_version = 5;
  uint32 field_count = 6;
  uint32 parameter_version = 7;
}

message BarometerData {
  float altitude = 1;
}

message VariometerData {
  float vertical_speed = 1;
}

message BarometerVariometerData {
  float altitude = 1;
  float vertical_speed = 2;
}

message FlightModeData {
  string mode = 1;
}

message LinkTXData {
  uint32 downlink_rssi = 1;
  uint32 uplink_power = 2;
  uint32 uplink_fps = 3;
}

message LinkRXData {
  uint32 uplink_rssi = 1;
  uint32 downlink_power = 2;
}

message SyncData {
  int32 rate = 1;
  int32 offset = 2;
}

message AttitudeData {
  float pitch = 1;
  float roll = 2;
  float yaw = 3;
}

message LinkStatsData {
  int32 uplink_rssi1 = 1;
  int32 uplink_rssi2 = 2;
  uint32 uplink_link_quality = 3;
  int32 uplink_snr = 4;
  uint32 active_antenna = 5;
  uint32 radio_frequency_mode = 6;
  uint32 uplink_power = 7;
  int32 downlink_rssi = 8;
  uint32 downlink_link_quality = 9;
  int32 downlink_snr = 10;
}

message GPSData {
  float latitude = 1;
  float longitude = 2;
  float ground_speed = 3;
  float heading = 4;
  int32 altitude = 5;
  uint32 satellites = 6;
}

message BatteryData {
  float voltage = 1;
  float current = 2;
  float fuel = 3;
  float remaining = 4;
}


message GetAppInfoRes {
  string release_tag = 1;
  string commit_hash = 2;
  string branch_name = 3;
}


message GetCRSFDevicesRes {
  repeated CRSFDeviceInfoData devices = 1;
}

message GetCRSFDeviceFieldsRes {
  repeated CRSFDeviceFieldData fields = 1;
}


enum CRSFDeviceFieldType {
  UINT8 = 0;
  INT8 = 1;
  UINT16 = 2;
  INT16 = 3;
  UINT32 = 4;
  INT32 = 5;
  UINT64 = 6;
  INT64 = 7;
  FLOAT = 8;
  TEXT_SELECT = 9;
  STRING = 10;
  FOLDER = 11;
  INFO = 12;
  COMMAND = 13;
  VTX = 14;
  STATUS = 46;
  OUT_OF_RANGE = 127;
}

message CRSFDeviceFieldData {
  oneof data {
    CRSFDeviceFieldUint8 uint8 = 1;
    CRSFDeviceFieldInt8 int8 = 2;
    CRSFDeviceFieldUint16 uint16 = 3;
    CRSFDeviceFieldInt16 int16 = 4;
    CRSFDeviceFieldUint32 uint32 = 5;  // not used by ELRS <= 3.3.0
    CRSFDeviceFieldInt32 int32 = 6;    // not used by ELRS <= 3.3.0
    CRSFDeviceFieldUint64 uint64 = 7;  // not used by ELRS <= 3.3.0
    CRSFDeviceFieldInt64 int64 = 8;    // not used by ELRS <= 3.3.0
    CRSFDeviceFieldFloat float = 9;    // not used by ELRS <= 3.3.0
    CRSFDeviceFieldTextSelect text_select = 10;
    CRSFDeviceFieldString string = 11;
    CRSFDeviceFieldFolder folder = 12;
    CRSFDeviceFieldInfo info = 13;
    CRSFDeviceFieldCommand command = 14;
  }
}


enum CRSFDeviceFieldCommandStep {
  IDLE = 0;
  CLICK = 1;
  EXECUTING = 2;
  ASK_CONFIRM = 3;
  CONFIRMED = 4;
  CANCEL = 5;
  QUERY = 6;
}


message CRSFDeviceFieldUint8 {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  uint32 value = 5;
  uint32 min = 6;
  uint32 max = 7;
  uint32 default = 8;
  string units = 9;
}

message CRSFDeviceFieldInt8 {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  int32 value = 5;
  int32 min = 6;
  int32 max = 7;
  int32 default = 8;
  string units = 9;

}


message CRSFDeviceFieldUint16 {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  uint32 value = 5;
  uint32 min = 6;
  uint32 max = 7;
  uint32 default = 8;
  string units = 9;
}

message CRSFDeviceFieldInt16 {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  int32 value = 5;
  int32 min = 6;
  int32 max = 7;
  int32 default = 8;
  string units = 9;
}


message CRSFDeviceFieldUint32 {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  uint32 value = 5;
  uint32 min = 6;
  uint32 max = 7;
  uint32 default = 8;
  string units = 9;
}

message CRSFDeviceFieldInt32 {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  int32 value = 5;
  int32 min = 6;
  int32 max = 7;
  int32 default = 8;
  string units = 9;
}

message CRSFDeviceFieldUint64 {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  uint64 value = 5;
  uint64 min = 6;
  uint64 max = 7;
  uint64 default = 8;
  string units = 9;
}

message CRSFDeviceFieldInt64 {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  int64 value = 5;
  int64 min = 6;
  int64 max = 7;
  int64 default = 8;
  string units = 9;
}

message CRSFDeviceFieldFloat {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  float value = 5;
  float min = 6;
  float max = 7;
  float default = 8;
  string units = 9;
}

message CRSFDeviceFieldInfo {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  string value = 5;
}

message CRSFDeviceFieldString {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  string value = 5;
}

message CRSFDeviceFieldFolder {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
}

message CRSFDeviceFieldCommand {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  CRSFDeviceFieldCommandStep step = 5;
  uint32 timeout = 6;
  string message = 7;
}


message CRSFDeviceFieldTextSelect {
  string name = 1;
  CRSFDeviceFieldType type = 2;
  uint32 id = 3;
  uint32 parent_id = 4;
  repeated string options = 5;
  uint32 value = 6;
  uint32 min = 7;
  uint32 max = 8;
  uint32 default = 9;
  string units = 10;
}

message GetCRSFDeviceFieldReq {
  CRSFDeviceInfoData device = 1;
  uint32 field_id = 2;
}

message GetCRSFDeviceFieldsReq {
  CRSFDeviceInfoData device = 1;
}

message GetCRSFDeviceFieldRes {
  CRSFDeviceFieldData field = 1;
}

message SetCRSFDeviceFieldReq {
  CRSFDeviceInfoData device = 1;
  CRSFDeviceFieldData field = 2;
}

message SetCRSFDeviceFieldRes {
  CRSFDeviceFieldData field = 1;
}



enum LinkStatusFlag {
  CONNECTED = 0;
  STATUS1 = 1;
  MODEL_MATCH = 2;
  IS_ARMED = 3;
  WARNING1 = 4;
  ERROR_CONNECTED = 5;
  ERROR_BAUDRATE = 6;
  CRITICAL_WARNING2 = 7;
}



message GetCRSFDeviceLinkStatusRes {
  CRSFDeviceLinkStatusData link_status = 1;
}

service JoystickControl {
  rpc getGamepads(Empty) returns (GetGamepadsRes) {};
  rpc getTransmitters(Empty) returns (GetTransmitterRes) {};

  rpc getConfig(Empty) returns (GetConfigRes) {}
  rpc setConfig(SetConfigReq) returns (Empty) {}
  rpc validateConfig(Empty) returns (ValidateConfigRes) {};

  rpc startLink(StartLinkReq) returns (Empty) {}
  rpc stopLink(Empty) returns (Empty) {}

  rpc startHTTP(Empty) returns (Empty) {}
  rpc stopHTTP(Empty) returns (Empty) {}

  rpc getLinkStream(Empty) returns (stream LinkState) {}
  rpc getTelemetryStream(Empty) returns (stream Telemetry) {}
  rpc getEvalStream(Empty) returns (stream EvalStates) {}
  rpc getTransmitterStream(GetTransmitterStreamReq) returns (stream TransmitterChannels) {}
  rpc getGamepadStream(GetGamepadStreamReq) returns (stream GamepadInputsStates) {}



  rpc getCRSFDevices(Empty) returns (GetCRSFDevicesRes);
  rpc getCRSFDeviceFields(GetCRSFDeviceFieldsReq) returns (GetCRSFDeviceFieldsRes) {}
  rpc getCRSFDeviceField(GetCRSFDeviceFieldReq) returns (GetCRSFDeviceFieldRes) {}
  rpc setCRSFDeviceField(SetCRSFDeviceFieldReq) returns (SetCRSFDeviceFieldRes) {}

  rpc getCRSFDeviceLinkStatus(Empty) returns (GetCRSFDeviceLinkStatusRes) {}
  rpc clearCRSFDeviceLinkCriticalFlags(Empty) returns(Empty) {}

  rpc getAppInfo(Empty) returns (GetAppInfoRes) {}

}